feat: Add new communication portfolio section with project pages and assets, and update navigation and design video path.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -94,15 +94,7 @@ const isAboutActive =
 								? "sub-active"
 								: ""}
 						>
-							Dev WEB
-						</a>
-						<a
-							href={`${base}communication`}
-							class={pathname.includes("/communication")
-								? "sub-active"
-								: ""}
-						>
-							Communication WEB
+							Développement Web
 						</a>
 						<a
 							href={`${base}design`}
@@ -110,7 +102,15 @@ const isAboutActive =
 								? "sub-active"
 								: ""}
 						>
-							Design Multimédia
+							Création numérique
+						</a>
+						<a
+							href={`${base}communication`}
+							class={pathname.includes("/communication")
+								? "sub-active"
+								: ""}
+						>
+							Communication
 						</a>
 						<a
 							href={`${base}light`}
@@ -118,7 +118,7 @@ const isAboutActive =
 								? "sub-active"
 								: ""}
 						>
-							Éclairage scénique
+							Lumière & Son
 						</a>
 					</div>
 				</div>
