--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -92,7 +92,7 @@ import lightImg from "../assets/images/light.jpg";
                         <a href="/developpement" class="bento-card skill-dev">
                             <div class="card-content">
                                 <div class="icon-bubble">💻</div>
-                                <h3>Développement</h3>
+                                <h3>Développement Web</h3>
                                 <p>
                                     Sites interactifs, applications web &
                                     intégration soignée.
@@ -110,7 +110,7 @@ import lightImg from "../assets/images/light.jpg";
                         <a href="/design" class="bento-card skill-design">
                             <div class="card-content">
                                 <div class="icon-bubble">🎨</div>
-                                <h3>Design & UI</h3>
+                                <h3>Création numérique</h3>
                                 <p>
                                     Interfaces modernes, identités visuelles &
                                     expérience utilisateur.
